re PR bootstrap/67030 (ARM bootstrap failure due to [-Werror=tautological-compare])

PR bootstrap/67030
	* c-common.c (warn_tautological_cmp): Don't warn for macro expansion.

	* c-c++-common/Wtautological-compare-2.c: New test.

From-SVN: r226264